feat: vamos implementando las companies
